tests/invalid/missing_return.frag.hlsl
float4 main() : SV_Target
{
    
}
